@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.web.browser" name="Mouseless Web Browser" version="0.0.4" provider-name="M. King">
+<addon id="script.web.browser" name="Mouseless Web Browser" version="0.0.5" provider-name="M. King">
 	<requires>
 		<import addon="xbmc.python" version="2.7.0" />
 	</requires>
